--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="title"><p>CPU Score</p></div>
         <p id="cpu-score">0</p>
       </div>
-      <div id="reset">
+      <div class="button" id="reset">
         <p>RESET</p>
       </div>
       <div id="display">
@@ -25,13 +25,13 @@
         <p id="game-result"></p>
         <p id="game-message"></p>
       </div>
-      <div class="option" id="Rock">
+      <div class="button option" id="Rock">
         <img src="https://i.pinimg.com/originals/da/1d/f2/da1df2577392fa9312f61a7f91b27a03.png" alt="rock" />
       </div>
-      <div class="option" id="Paper">
+      <div class="button option" id="Paper">
         <img src="https://i.pinimg.com/originals/b9/ec/a8/b9eca8946cbcdaf2500a265e214744f5.png" alt="paper" />
       </div>
-      <div class="option" id="Scissors">
+      <div class="button option" id="Scissors">
         <img src="https://lh3.googleusercontent.com/proxy/8tmmWjOMX8Bt7jxhtwGm_z6cprvdABGiEzjEkRruqPU0ClK47ow9EOIFKRQb5ns9IrYOhbT0RU5XNgDOCVzrqG3_BYtOWyt9hQZRlJnbIWxWvsrSquq0pNM3Q1kj4w" alt="scissors" />
       </div>
     </div>
