--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <p id="game-message"></p>
       </div>
       <div class="button option" id="Rock">
-        <img src="https://i.pinimg.com/originals/da/1d/f2/da1df2577392fa9312f61a7f91b27a03.png" alt="rock" />
+        <img src="https://www.pngkit.com/png/full/207-2077319_rock-paper-scissors-png-clipart-rock-paper-scissors.png" alt="rock" />
       </div>
       <div class="button option" id="Paper">
-        <img src="https://i.pinimg.com/originals/b9/ec/a8/b9eca8946cbcdaf2500a265e214744f5.png" alt="paper" />
+        <img src="https://www.jing.fm/clipimg/full/123-1236295_selection-paper-rock-paper-scissors-png.png" alt="paper" />
       </div>
       <div class="button option" id="Scissors">
-        <img src="https://lh3.googleusercontent.com/proxy/8tmmWjOMX8Bt7jxhtwGm_z6cprvdABGiEzjEkRruqPU0ClK47ow9EOIFKRQb5ns9IrYOhbT0RU5XNgDOCVzrqG3_BYtOWyt9hQZRlJnbIWxWvsrSquq0pNM3Q1kj4w" alt="scissors" />
+        <img src="https://www.seekpng.com/png/full/111-1114370_rock-paper-scissors-rock-paper-scissors-clipart.png" alt="scissors" />
       </div>
     </div>
     <script src="./app.js">
