--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Rock, Paper, Scissors</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./main.css" />
+    <link rel="icon" href="https://www.pngkey.com/png/full/87-876078_rock-paper-scissors-vector-rock-paper-scissors-clipart.png" />
   </head>
   <body>
     <div id="container">
